--- a/register.html
+++ b/register.html
@@ -10,12 +10,13 @@
 
 <body>
     <h1>Register a New Account</h1>
-    <form id=""></form>
-        <input type="text" placeholder="Enter your username" required>
-        <input type="email" placeholder="Enter your email" required>
-        <input type="password" placeholder="Enter your password" required>
+    <form id="register"></form>
+        <input type="text" placeholder="Enter your username" required name="username">
+        <input type="email" placeholder="Enter your email" required name="email">
+        <input type="password" placeholder="Enter your password" required name="password">
         <button type="submit">Submit</button>
     </form>
+    <h1 id="message"></h1>
     <div>
         <a href="./index.html">Home</a>
         <a href="login.html">Login</a>
