--- a/login.html
+++ b/login.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <script src="./scripts/login.js" defer></script>
 </head>
 <body>
     <h1>Login As Existing User</h1>
+    <form id="login"></form>
+    <input type="text" placeholder="Enter Your username" required="username">
+    <input type="text" placeholder="Enter Your email" required="email">
     
     <div>
         <a href="./index.html">Home</a>
