--- a/register.html
+++ b/register.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>Register a New Account</h1>
-    <form id="register"></form>
+    <form id="register">
         <input type="text" placeholder="Enter your username" required name="username">
         <input type="email" placeholder="Enter your email" required name="email">
         <input type="password" placeholder="Enter your password" required name="password">
